# geomarketing-coffeeshop-makassar

./: .RData  .Rhistory  Analisis.docx  analisis_geomarketing_makassar.html  analysis.r  main.py  pyproject.toml  reverse-geocoding.R  reviews_{resto}.csv
assets/chart/: analisis_geomarketing_makassar.html
dataset/: 1.csv  10.csv  11.csv  12.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv  Biringkanaya.csv  Bontoala.csv  Makassar.csv  Mamajang.csv  Manggala.csv  Mariso.csv  Panakkukang.csv  Rappocini.csv  Tallo.csv  Tamalanrea.csv  Tamalate.csv  Ujung Pandang.csv  Ujung Tanah.csv  Wajo.csv  data.csv  data_agg.csv  data_clean.csv  google (1).csv  google (3).csv  ranked_data.csv  reviews_Goodfields.csv  reviews_MyCoffee.csv  reviews_Onkel John's Coffee Hasanuddin.csv  reviews_onkel.csv  reviews_onkel_clean.csv  reviews_onkel_lowest.csv  rgeo-data.csv
notebooks/: cleaning.ipynb  exploration.ipynb  nlp.ipynb  sentiment.ipynb  sentiment_1.ipynb  sentiment_2.ipynb
scripts/: scraping_reviews.py
utils/: utils.py
