[project]
name = "geomarketing-coffeshop-makassar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "playwright>=1.58.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
